<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VehicleDatacollection</string>
    <string name="sensors">Sensores</string>
    <string name="trip_data">Información viaje</string>
    <string name="accelerometer">Acelerómetro</string>
    <string name="gyroscope">Giróscopio</string>
    <string name="magnetometer">Magnetómetro</string>
    <string name="gps">GPS</string>
    <string name="m_s2">m/s<sup><font size="10">2</font></sup></string>
    <string name="rad_s">rad/s</string>
    <string name="micro_tesla">μT</string>
    <string name="x_equal">X=</string>
    <string name="y_equal">Y=</string>
    <string name="z_equal">Z=</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="altitude">Altitud</string>
    <string name="speed">Velocidad</string>
    <string name="value">value</string>
    <string name="value_number">0</string>
    <string name="start">Comenzar</string>
    <string name="stop">Parar</string>
    <string name="start_nc">Near Crash</string>
    <string name="stop_nc">Parar\nNear Crash</string>
    <string name="trip_history">Historial de viajes</string>
    <string name="id">Id</string>
    <string name="timestamp">timestamp</string>
    <string name="id_trip">Id Viaje</string>
    <string name="time_lecture">Time</string>
    <string name="kinematic_data_register">Cinematicos</string>
    <string name="gps_data_register">GPS</string>
    <string name="near_crashes_register">Datos <br/> Cinematicos <br/> Near-crashes</string>
    <string name="frequency">Frecuencia</string>
    <string name="error_frequency">Invalido!! la frecuencia no debe ser 0</string>
    <string name="error_vehicle_id">Ingrese un identificador para el vehiculo actual</string>
    <string name="vehicle">Vehiculo</string>
    <string name="route">Ruta</string>
    <string name="send_trip_data">Enviar Datos de Viaje</string>
    <string name="id_vehicle">Id vehículo</string>
    <string name="mean_frequency">Frecuencia promedio</string>
    <string name="data_captured">Datos Capturados</string>
    <string name="register_nc">Near Crash</string>
    <string name="title_remove_trip">Remover trayecto</string>
    <string name="msg_remove_trip">Esta seguro de eliminar el trayecto con ID: </string>
    <string name="OK">Sí, eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="trip_removed">Trayecto Eliminado</string>
    <string name="id_trip_title">Id viaje</string>
    <string name="date_trip_title">Fecha viaje</string>
    <string name="id_route">Id ruta</string>
    <string name="hz">Hz</string>
    <string name="collect_data">Recolección de datos</string>

    <!-- Spinners' Arrays -->
    <string name="readable_spn_vehicles">Lista de vehículos</string>
    <string-array name="vehicles_array">
        <item>Test (Huawei Mate 20 Lite)</item>
        <item>Test (Xiaomi Redmi Note 9S)</item>
        <item>Renault Stepway (Huawei Mate 20 Lite)</item>
        <item>Renault Stepway (Xiaomi Redmi Note 9S)</item>
        <item>Nissan March (Huawei Mate 20 Lite)</item>
        <item>Nissan March (Xiaomi Redmi Note 9S)</item>
    </string-array>

    <string name="readable_spn_routes">Lista de rutas</string>
    <string name="additional_info">Información adicional</string>
    <string-array name="routes_array">
        <item>Test</item>
        <item>Aceleración repentina</item>
        <item>Frenada repentina</item>
        <item>Giro derecho agresivo</item>
        <item>Giro izquierdo agresivo</item>
        <item>Cambio de línea agresivo derecha</item>
        <item>Cambio de línea agresivo izquierda</item>
        <item>Conducción por Ipiales</item>
    </string-array>

</resources>