<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensors"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/title_accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/accelerometer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/x_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/x_equal" />

            <TextView
                android:id="@+id/x_a_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/x_a_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s2" />

            <TextView
                android:id="@+id/y_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/y_equal" />

            <TextView
                android:id="@+id/y_a_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/y_a_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s2" />

            <TextView
                android:id="@+id/z_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/z_equal" />

            <TextView
                android:id="@+id/z_a_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/z_a_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s2" />

        </LinearLayout>


        <TextView
            android:id="@+id/title_gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/gyroscope" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/x_g_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/x_equal" />

            <TextView
                android:id="@+id/x_g_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/x_g_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_s" />

            <TextView
                android:id="@+id/y_g_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/y_equal" />

            <TextView
                android:id="@+id/y_g_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/y_g_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_s" />

            <TextView
                android:id="@+id/z_g_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/z_equal" />

            <TextView
                android:id="@+id/z_g_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/z_g_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_s" />

        </LinearLayout>


        <TextView
            android:id="@+id/title_magnetometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/magnetometer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/x_m_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/x_equal" />

            <TextView
                android:id="@+id/x_m_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/x_m_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/micro_tesla" />

            <TextView
                android:id="@+id/y_m_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/y_equal" />

            <TextView
                android:id="@+id/y_m_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/y_m_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/micro_tesla" />

            <TextView
                android:id="@+id/z_m_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/z_equal" />

            <TextView
                android:id="@+id/z_m_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/z_m_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/micro_tesla" />

        </LinearLayout>


        <TextView
            android:id="@+id/title_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/gps" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />

            <TextView
                android:id="@+id/longitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/longitude" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />


            <TextView
                android:id="@+id/altitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/altitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/value" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/trip_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_stop" />

</androidx.constraintlayout.widget.ConstraintLayout>