<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripLog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_history"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/id_trip_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/id_trip_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/id_trip_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_trip_history"
        app:layout_constraintEnd_toStartOf="@+id/date_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/date_title"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_trip_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_trip_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_trip_title"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <View
        android:id="@+id/divider_title"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_trip_history"
        app:layout_constraintTop_toBottomOf="@+id/id_trip_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_trip_history"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_title">


    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_log"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_trip_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_layout_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">


        <LinearLayout
            android:id="@+id/row_log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/column_title_1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/id_vehicle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/column_title_2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/data_captured"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/column_title_3"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/near_crashes_register"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/column_title_4"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/mean_frequency"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_log_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/column_value_1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/value_number"
                android:gravity="center"/>
            <TextView
                android:id="@+id/column_value_2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/value_number"
                android:gravity="center"/>

            <TextView
                android:id="@+id/column_value_3"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/value_number" />
            <TextView
                android:id="@+id/column_value_4"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/value_number"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_log_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/column_title_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/id_route"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_log_info_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/column_value_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_number" />
        </LinearLayout>

        <Button
            android:id="@+id/button_send_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_trip_data" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_title" />


</androidx.constraintlayout.widget.ConstraintLayout>